add primitive postgres recipe

--- a/templates/default/install.properties.erb
+++ b/templates/default/install.properties.erb
@@ -33,7 +33,7 @@ apim.ssl.required=true
 keystore.file=included
 
 # database
-database=mysql
+database=postgres
 database.driver=included
 database.mysql.driver=included
 database.jdbcDriverClass=com.mysql.jdbc.Driver
