--- a/templates/default/fedora.fcfg.erb
+++ b/templates/default/fedora.fcfg.erb
@@ -14,7 +14,7 @@
     <comment>Number of seconds Fedora http client will wait for data coming across an 
 		established http connection.</comment>
   </param>
-  <param name="fedoraServerHost" value="localhost">
+  <param name="fedoraServerHost" value="<%= node['fqdn'] %>">
     <comment>Defines the host name for the Fedora server, as seen from the 
 		outside world.</comment>
   </param>
@@ -415,7 +415,7 @@
     <comment>Fedora's Java Messaging Service (JMS) Module</comment>
     <param name="enabled" value="true"/>
     <param name="java.naming.factory.initial" value="org.apache.activemq.jndi.ActiveMQInitialContextFactory"/>
-    <param name="java.naming.provider.url" value="vm:(broker:(tcp://localhost:61616))"/>
+    <param name="java.naming.provider.url" value="vm:(broker:(tcp://<%= node['fqdn'] %>:61616))"/>
     <param name="datastore1" value="apimUpdateMessages">
       <comment>A datastore representing a JMS Destination for APIM events which update the repository</comment>
     </param>
@@ -538,7 +538,7 @@
     <param name="dbPassword" value="<%= node['fedora']['db']['password'] %>">
       <comment>The database password.</comment>
     </param>
-    <param name="jdbcURL" value="jdbc:postgresql://localhost/fedora">
+    <param name="jdbcURL" value="jdbc:postgresql://<%= node['fedora']['db']['host'] %>/fedora">
       <comment>The JDBC connection URL.</comment>
     </param>
     <param name="whenExhaustedAction" value="1">
@@ -693,7 +693,7 @@
     <param name="dbPassword" value="<%= node['fedora']['db']['password'] %>">
       <comment>The database password.</comment>
     </param>
-    <param name="jdbcURL" value="jdbc:oracle:thin:@localhost:1521:fedora3">
+    <param name="jdbcURL" value="jdbc:oracle:thin:@<%= node['fcrepo']['db']['host'] %>:1521:fedora3">
       <comment>The JDBC connection URL.</comment>
     </param>
     <param name="whenExhaustedAction" value="1">
@@ -774,7 +774,7 @@
     <param name="dbPassword" value="<%= node['fedora']['db']['password'] %>">
       <comment>The database password.</comment>
     </param>
-    <param name="jdbcURL" value="jdbc:postgresql://localhost/fedora">
+    <param name="jdbcURL" value="jdbc:postgresql://<%= node['fedora']['db']['host'] %>/fedora">
       <comment>The JDBC connection URL.</comment>
     </param>
     <param name="whenExhaustedAction" value="1">
@@ -914,7 +914,7 @@
     <param name="autoFlushBufferSize" value="1000"/>
     <param name="username" value="<%= node['fedora']['db']['username'] %>"/>
     <param name="poolMaxSize" value="10"/>
-    <param name="jdbcURL" value="jdbc:postgresql://localhost/riTriples"/>
+    <param name="jdbcURL" value="jdbc:postgresql://<%= node['fcrepo']['db']['host'] %>/riTriples"/>
     <param name="ddlGenerator" value="org.nsdl.mptstore.impl.postgres.PostgresDDLGenerator"/>
     <param name="connectorClassName" value="org.trippi.impl.mpt.MPTConnector"/>
     <param name="jdbcDriver" value="org.postgresql.Driver"/>
